--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -12,3 +12,17 @@ div#features-list div.feature img{
     clear: both;
     margin: 10px 20px 10px 0px;
 }
+
+div#feature-list {
+    clear: both;
+}
+
+div.container {
+    display: block;
+    margin: 0px 10% 0px 10%;
+    /* width: 80%; */
+}
+
+footer {
+    clear: both;
+}
