--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,34 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+div.vertical-line {
+    border-right: 2px solid #ffffff;
+    width: 1px;
+    float: left;
+    margin-top: 25px;
+    margin-bottom: 200px;
+    left: 10px;
+    position: absolute;
+    height: 100%;
+
+}
+
+div.launch-history {
+    position: relative;
+    clear: both;
+}
+
+div.launch-history span.bullet {
+    font-size: 3em;
+    color: #ffffff;
+}
+
+div.launch-history span.date {
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+div.launch-history div.history-item {
+    height: 7em;
+}
