Created the basic skeleton for the meet the team page.

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,27 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.meet-the-team {
+    max-width: 80%;
+	background-color: #353535;
+	margin: 1em auto;
+	color: white;
+	text-align: center;
+	padding: 1em;
+}
+
+.member-profile {
+	max-width: 23%;
+	display: inline-block;
+	text-align: center;
+	padding: 1em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+	border-bottom: 0.1em solid white;
+}
+
+.member-profile .avatar-icon {
+    font-size: 2.5em;
+}
