--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,19 @@ body, html {
 .member-profile:hover {
     background-color: #3f3f3f;
     border-bottom: 0.1em solid gold;
+    cursor: pointer;
 }
 
 .member-profile .avatar-icon {
     font-size: 2.5em;
+}
+
+.member-profile h3 {
+    font-weight: 400;
+}
+
+.member-profile h4 {
+    font-weight: 500;
+    font-size: 0.86em;
+    font-style: italic;
 }
