--- a/css/menu.css
+++ b/css/menu.css
@@ -99,7 +99,7 @@ a:hover
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: #cdcdcd;/*#232323*/
 }
 
 /*
@@ -133,7 +133,7 @@ a:hover
   padding-top: 125px;
   right: -100px;
   
-  background: rgba(0, 0, 0, 0.8);/*#ededed*/
+  background: rgba(0, 0, 0, 0.6);/*#ededed*/
   list-style-type: none;
   /*-webkit-font-smoothing: antialiased;*/
   /* to stop flickering of text in safari */
