--- a/css/menu.css
+++ b/css/menu.css
@@ -17,14 +17,14 @@ body
   font-size: 1.2em;
 }
 
-a
+ul#menu a
 {
   text-decoration: none;
   color: #232323;
   transition: color 0.3s ease;
 }
 
-a:hover
+ul#menu a:hover
 {
   color: tomato;
 }
