--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("../image/homeImage.jpg");
+    background-image: url("../image/homeImage.png");
 
     /* Full height */
     height: 100%; 
