Added some refinements to the homepage

--- a/css/menu.css
+++ b/css/menu.css
@@ -134,14 +134,14 @@ ul#menu a:hover
   padding-top: 125px;
   right: -100px;
   
-  background: rgba(0, 0, 0, 0.6);/*#ededed*/
+  background: rgba(0, 0, 0, 0.7);/*#ededed*/
   list-style-type: none;
   /*-webkit-font-smoothing: antialiased;*/
   /* to stop flickering of text in safari */
   
   transform-origin: 0% 0%;
   transform: translate(100%, 0);
-  
+  height: 79vh;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
