--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,10 @@ div.launch-history div.history-item {
     display: inline-block;
     padding: 1em;
     margin: 1em 0 1em 0;
-    border: 1px solid #ffffff;
+    border: 1px solid tomato;
     min-width: 100%;
     text-align:center;
-    color: #ffffff;
+    color: tomato;
 }
 
 .splashFont{
