--- a/ContactPage.css
+++ b/ContactPage.css
@@ -1,33 +1,30 @@
 .classinput {
-	width: 50%;
-    padding: 1% 1.5%;
-    margin: 1% 2%;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
 }
+
+div.classinput input {
+    width: 100%;
+    height: 2.5em;
+    font-size: 1em;
+
+}
+
+div.classinput textarea {
+    width: 100%;
+    height: 4em;
+    font-size: 1em;
+}
+
 .button {
-   padding: 1% 1.5%;
-    margin: 1% 2%;
   font-size: 1em;
-
-  color: #0e0707;
-  background-color:#DDC5F6;
-  border: none;
-  border-radius: 1em;
-  box-shadow: 0 9px #999;
+  background-color: #232323;
 }
-
-.button:hover {background-color: #3e8e41}
 
 .button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
 
 .Error {
-     color: #FF0000;
+     color: tomato;
 }
 
 h2 {
