--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Expletus+Sans:700i');
-
-body, html {
+body,
+html {
     height: 100%;
     margin: 0;
 }
@@ -13,10 +13,8 @@ h2 {
 .bg {
     /* The image used */
     background-image: url("../image/homeImage.png");
-
     /* Full height */
-    height: 100%; 
-
+    height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -32,7 +30,6 @@ div.vertical-line {
     left: 8px;
     position: absolute;
     height: 70%;
-
 }
 
 div.launch-history {
@@ -44,7 +41,6 @@ div.feature p {
     /*display: inline-block;*/
     overflow: hidden;
 }
-
 
 div.launch-history span.bullet {
     font-size: 3em;
@@ -69,25 +65,26 @@ div.launch-history div.history-item {
 }
 
 .button {
+    font-size: 1.2em;
     display: inline-block;
     padding: 1em;
     margin: 1em 0 1em 0;
     border: 1px solid tomato;
     min-width: 100%;
-    text-align:center;
+    text-align: center;
     color: tomato;
+    background-color: transparent;
 }
 
-.splashFont{
+.splashFont {
     font-family: 'Expletus Sans', sans-serif;
     font-size: 4em;
-
     font-weight: 700;
     font-style: italic;
     line-height: 1em;
 }
 
-.splashTextContainer{
+.splashTextContainer {
     margin-left: auto;
     margin-right: auto;
     bottom: 30%;
@@ -102,18 +99,18 @@ span.subTitle {
 
 .meet-the-team {
     max-width: 80%;
-	background-color: #353535;
-	margin: 1em auto;
-	color: white;
-	text-align: center;
-	padding: 1em;
+    background-color: #353535;
+    margin: 1em auto;
+    color: white;
+    text-align: center;
+    padding: 1em;
 }
 
 .member-profile {
-	max-width: 23%;
-	display: inline-block;
-	text-align: center;
-	padding: 1em;
+    max-width: 23%;
+    display: inline-block;
+    text-align: center;
+    padding: 1em;
     margin-left: 1.5em;
     margin-right: 1.5em;
     margin-bottom: 1em;
@@ -141,33 +138,89 @@ span.subTitle {
     font-style: italic;
 }
 
+/* Modal CSS */
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+
+.modal-video {}
+
+.modal-content {
+    background-color: #353535;
+    margin: 15% auto;
+    padding: 20px;
+    max-width: 1020px;
+    text-align: center;
+}
+
+/* The Close Button */
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /*Media Queries default*/
 
-
 /* Small devices (portrait tablets and large phones, 600px and up) */
+
 @media only screen and (min-width: 600px) {
-    .splashFont{
+    .splashFont {
         font-size: 4em;
     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
+
 @media only screen and (min-width: 768px) {
-    .splashFont{
+    .splashFont {
         font-size: 7em;
     }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
+
 @media only screen and (min-width: 992px) {
-    .splashFont{
+    .splashFont {
         font-size: 7em;
     }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up)*/
+
 @media only screen and (min-width: 1200px) {
-    .splashFont{
+    .splashFont {
         font-size: 8em;
     }
 }
