--- a/css/team.css
+++ b/css/team.css
@@ -1,9 +1,46 @@
-#pad{
-    padding-top: 5%;
+section.meet-the-team {
+    padding: 1em .5em 1em .5em;
+    margin: 2em 0 0 0;
 }
-#padTop{
-    padding-top: 3%;
-}
+
 #about{
     text-align: center;
+}
+
+.meet-the-team {
+    background-color: #353535;
+    color: white;
+    text-align: center;
+}
+
+.member-profile {
+    max-width: 23%;
+    display: inline-block;
+    text-align: center;
+    padding: 1em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+    border-bottom: 0.1em solid white;
+    /* border-radius: 1em; */
+}
+
+.member-profile:hover {
+    background-color: #3f3f3f;
+    border-bottom: 0.1em solid gold;
+    cursor: pointer;
+}
+
+.member-profile .avatar-icon {
+    font-size: 2.5em;
+}
+
+.member-profile h3 {
+    font-weight: 400;
+}
+
+.member-profile h4 {
+    font-weight: 500;
+    font-size: 0.86em;
+    font-style: italic;
 }
