--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,12 @@ div.launch-history div.history-item {
     width: 100%;
 }
 
+main {
+    display: block;
+    margin: 0px 20% 0px 20%;
+    /* width: 80%; */
+}
+
 span.subTitle {
     font-size: 2em;
 }
