--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -18,5 +18,15 @@ div#feature-list {
 }
 
 footer {
+    font-size: .8em;
+    font-style: normal;
+    background-color: #000000;
+    padding: 2em 20% 0 20%;
     clear: both;
+}
+
+footer a {
+    color: #ffffff;
+    font-style: italic;
+    text-decoration: underline;
 }
