--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -13,6 +13,12 @@ div#features-list div.feature img{
     margin: 10px 20px 10px 0px;
 }
 
+div.feature img {
+    width: 4em;
+    height: 4em;
+}
+
+
 div#feature-list {
     clear: both;
 }
@@ -29,4 +35,193 @@ footer a {
     color: #ffffff;
     font-style: italic;
     text-decoration: underline;
+}
+
+footer span.author {
+    display: inline-block;
+}
+
+
+.bg {
+    /* The image used */
+    background-image: url("../image/homeImage.png");
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#banner-scroll-arrow {
+    background-image: url("../image/expand-button.svg");
+    bottom: 5%;
+    position: absolute;
+    text-align: center;
+    width: 3em;
+    height: 2.5em;
+    z-index: 0;
+    overflow: visible;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
+    /* background-color: white; */
+    background-size: cover;
+    border-radius: 100%;
+    cursor: pointer;
+    transition: 0.2s opacity;
+    opacity: 0.5;
+    color: tomato;
+}
+
+#banner-scroll-arrow:hover {
+    opacity: 1.0;
+}
+
+div.launch-history {
+    position: relative;
+    clear: both;
+}
+
+div.feature p {
+    /*display: inline-block;*/
+    overflow: hidden;
+}
+
+div.launch-history span.bullet {
+    font-size: 3em;
+    color: #ffffff;
+    margin: 0px;
+    padding: 0px;
+    line-height: 2px;
+    position: absolute;
+    left: -14px;
+}
+
+div.launch-history span.date {
+    display: inline-block;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+div.launch-history div.history-item {
+    height: auto;
+    /*! margin-left: 15%; */
+    border-left: 1px #ffffff solid;
+    padding: 15px;
+}
+
+div.launch-history div:last-child {
+    border: none;
+}
+
+.button {
+    font-size: 1em;
+    display: inline-block;
+    padding: .5em;
+    margin: 1em 0 1em 0;
+    border: 1px solid tomato;
+    min-width: 100%;
+    text-align: center;
+    color: tomato;
+    background-color: transparent;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+
+.modal-video {}
+
+.modal-content {
+    background-color: #353535;
+    margin: 15% auto;
+    padding: 20px;
+    max-width: 1020px;
+    text-align: center;
+}
+
+/* The Close Button */
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.splashFont {
+    font-family: 'Expletus Sans', sans-serif;
+    font-size: 4em;
+    font-weight: 700;
+    font-style: italic;
+    line-height: 1em;
+}
+
+.splashTextContainer {
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 30%;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+/*Media Queries default*/
+
+@media (min-width: 0px) and (max-width: 600px) {
+    div.feature img {
+        padding: 1em 0 0 0;
+        width: 3em;
+        height: 3em;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+
+@media (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media (min-width: 992px) {
+
 }
