--- a/css/style.css
+++ b/css/style.css
@@ -5,115 +5,21 @@ html {
     margin: 0;
 }
 
+body {
+    font-size: 65.2%;
+}
+
 h2 {
     font-family: 'Expletus Sans', sans-serif;
     /*border-bottom: .2em solid #ffffff;*/
-    font-size: 2.5em;
+    font-size: 1.8em;
     /*display: inline-block;*/
     text-align: center;
     /*margin: 0 auto 0 auto;*/
 }
 
-
-
-.bg {
-    /* The image used */
-    background-image: url("../image/homeImage.png");
-    /* Full height */
-    height: 100%;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#banner-scroll-arrow {
-	background-image: url("../image/expand-button.svg");
-	bottom: 5%;
-	position: absolute;
-	text-align: center;
-	width: 5%;
-	z-index: 5;
-	height: 8%;
-	background-repeat: no-repeat;
-	margin: 0 auto;
-	left: 50%;
-	transform: translateX(-50%);
-	/* background-color: white; */
-	background-size: cover;
-    border-radius: 100%;
-    cursor: pointer;
-    transition: 0.2s opacity; 
-    opacity: 0.5;
-    color: tomato;
-}
-
-#banner-scroll-arrow:hover {
-    opacity: 1.0;
-}
-
-div.vertical-line {
-    border-right: 2px solid #ffffff;
-    width: .25em;
-    float: left;
-    margin-top: 29px;
-    margin-bottom: 200px;
-    left: 8px;
-    position: absolute;
-    height: 70%;
-}
-
-div.launch-history {
-    position: relative;
-    clear: both;
-}
-
-div.feature p {
-    /*display: inline-block;*/
-    overflow: hidden;
-}
-
-div.launch-history span.bullet {
-    font-size: 3em;
-    color: #ffffff;
-    margin: 0px;
-    padding: 0px;
-    line-height: 2px;
-    position: absolute;
-    left: -14px;
-}
-
-div.launch-history span.date {
-    display: inline-block;
-    font-size: 1.5em;
-    font-weight: 700;
-}
-
-div.launch-history div.history-item {
-    height: auto;
-    /*! margin-left: 15%; */
-    border-left: 1px #ffffff solid;
-    padding: 15px;
-}
-
-div.launch-history div:last-child {
-    border: none;
-}
-
 .clearfix {
     clear: both;
-}
-
-.button {
-    font-size: 1.2em;
-    display: inline-block;
-    padding: 1em;
-    margin: 1em 0 1em 0;
-    border: 1px solid tomato;
-    min-width: 100%;
-    text-align: center;
-    color: tomato;
-    background-color: transparent;
 }
 
 .navbanner
@@ -126,7 +32,6 @@ div.launch-history div:last-child {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 
 .navbannerFont{
 
@@ -147,23 +52,6 @@ div.launch-history div:last-child {
     width: 100%;
 }
 
-.splashFont {
-    font-family: 'Expletus Sans', sans-serif;
-    font-size: 4em;
-    font-weight: 700;
-    font-style: italic;
-    line-height: 1em;
-}
-
-.splashTextContainer {
-    margin-left: auto;
-    margin-right: auto;
-    bottom: 30%;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-}
-
 main {
     display: block;
     margin: 0px 20% 0px 20%;
@@ -171,7 +59,7 @@ main {
 }
 
 span.subTitle {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 main {
@@ -179,91 +67,27 @@ main {
     margin: 0px 20% 0px 20%;
     /* width: 80%; */
 }
-/*Media Queries default*/
-
-/* The Modal (background) */
-
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-
-.modal-video {}
-
-.modal-content {
-    background-color: #353535;
-    margin: 15% auto;
-    padding: 20px;
-    max-width: 1020px;
-    text-align: center;
-}
-
-
-
-/* The Close Button */
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
 
 /*Media Queries default*/
+
+@media (min-width: 0px) and (max-width: 600px) {
+    body {font-size: 1.1em}
+}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
-@media only screen and (min-width: 600px) {
-    .splashFont {
-        font-size: 4em;
-    }
+@media (min-width: 600px) {
+    body {font-size: 1.2em}
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 
-@media only screen and (min-width: 768px) {
-    .splashFont {
-        font-size: 7em;
-    }
+@media (min-width: 768px) {
+    body {font-size: 1.3em}
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 
-@media only screen and (min-width: 992px) {
-    .splashFont {
-        font-size: 7em;
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up)*/
-
-@media only screen and (min-width: 1200px) {
-    .splashFont {
-        font-size: 8em;
-    }
+@media (min-width: 992px) {
+    body {font-size: 1.4em}
 }
