--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,14 @@ html {
 
 body {
     font-size: 65.2%;
+    line-height: 1.5em;
 }
+
+h1, h2, h3 {
+    padding: .5em 0 .7em 0;
+    font-weight: bold;
+}
+
 
 h2 {
     font-family: 'Expletus Sans', sans-serif;
@@ -22,49 +29,13 @@ h2 {
     clear: both;
 }
 
-.navbanner
-{
-    background-image: url("../image/panoramic-banner.jpg");
-    
-    height: 16%; 
-    
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.navbannerFont{
-
- font-family: 'Expletus Sans', sans-serif;
-    font-size: 2em;
-
-    font-weight: 200;
-    font-style: italic;
-    line-height: 1em;
-}
-
-.navbannerContainer{
-    margin-left: auto;
-    margin-right: auto;
-    bottom: 90%;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-}
-
-main {
-    display: block;
-    margin: 0px 20% 0px 20%;
-    /* width: 80%; */
-}
-
 span.subTitle {
     font-size: 1.5em;
 }
 
 main {
     display: block;
-    margin: 0px 20% 0px 20%;
+    margin: 2em 20% 2em 20%;
     /* width: 80%; */
 }
 
