Optimize splash image partially . Add directive for php in all php pages

--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -31,7 +31,7 @@ span.subTitle {
 
 .bg {
     /* The image used */
-    background-image: url("../image/homeImage.png");
+    background-image: url("../image/homeImage.jpg");
     /* Full height */
     height: 100%;
     /* Center and scale the image nicely */
