Delete unneeded files and fix some issues with the gallery

--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -1,6 +1,13 @@
-* {
+*:not(#menu) {
     box-sizing: border-box;
 }
+
+main {
+    margin: 0 10% 0 10% !important;
+    padding: 0 0 3em 0;
+}
+
+
 
 body {
     margin: 0;
