Fixed a bunch of accessbility errors reported by the WAVE extension. Still need to fix the missing form label on the menu.

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,14 +9,15 @@
     background-size: cover;
 }
 
-.navbannerFont{
-    cursor: pointer;
-    font-family: 'Expletus Sans', sans-serif;
-    font-size: 2em;
-
-    font-weight: 200;
-    font-style: italic;
-    line-height: 1em;
+.navbannerFont {
+	cursor: pointer;
+	font-family: 'Expletus Sans', sans-serif;
+	font-size: 2em;
+	font-weight: 200;
+	font-style: italic;
+	line-height: 1em;
+	color: white;
+	text-decoration: none;
 }
 
 .navbannerContainer{
